--- a/ArmyTechTask/Areas/Admin/Views/Cities/Index.cshtml
+++ b/ArmyTechTask/Areas/Admin/Views/Cities/Index.cshtml
@@ -2,40 +2,53 @@
 @{
     ViewData["Title"] = "Cities Page";
 }
-<div class="text-center">
-    <h1 class="display-4">Cities</h1>
-    <table class="table table-bordered table-striped" style="width:100%">
-    <thead>
-        <tr>
-            <th>
-                City Id
-			</th>
-            <th>
-                City Name
-			</th>
-            <th>Actions</th>
-		</tr>
-	</thead>
-    <tbody>
-        @foreach(var city in Model)
-        {
+
+<main class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Cities List</h2>
+		</div>
+        <div class="col-6 text-end">
+            <a asp-controller="Cities" asp-action="Create" class="btn btn-success">
+                <i class="bi bi-plus-circle"></i> &nbsp; Create New City
+			</a>
+        </div>
+    </div>
+    <br/>
+    <div class="text-center">
+        <table class="table table-bordered table-striped" style="width:100%">
+        <thead>
             <tr>
-                <td width="10%">
-                    @city.Id
-				</td>
-                <td width="70%">
-                    @city.CityName
-				</td>
-                <td width="20%">
-                    <div class="w-75 btn-group" role="group">
-                        <a asp-controller="Category" asp-action="Edit" asp-route-id="@city.Id"
-                        class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
-                        <a asp-controller="Category" asp-action="Delete" asp-route-id="@city.Id"
-                        class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
-					</div>
-				</td>
-			</tr>
-        }
-    </tbody>
-</table>
-</div>
+                <th>
+                    City Id
+			    </th>
+                <th>
+                    City Name
+			    </th>
+                <th>Actions</th>
+		    </tr>
+	    </thead>
+        <tbody>
+            @foreach(var city in Model)
+            {
+                <tr>
+                    <td width="10%">
+                        @city.Id
+				    </td>
+                    <td width="70%">
+                        @city.CityName
+				    </td>
+                    <td width="20%">
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@city.Id"
+                            class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@city.Id"
+                            class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
+					    </div>
+				    </td>
+			    </tr>
+            }
+        </tbody>
+    </table>
+    </div>
+</main>
