--- a/ArmyTechTask/Areas/Admin/Views/Cashier/Index.cshtml
+++ b/ArmyTechTask/Areas/Admin/Views/Cashier/Index.cshtml
@@ -1,12 +1,60 @@
-﻿@model IEnumerable<Cities>
+﻿@model IEnumerable<Cashier>
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Cashier Page";
 }
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-    @foreach (var city in Model)
-    {
-        <p>@city.CityName</p>
-    }
-</div>
+
+<main class="container p-3">
+    <div class="row pt-4">
+        <div class="col-6">
+            <h2 class="text-primary">Cashier List</h2>
+		</div>
+        <div class="col-6 text-end">
+            <a asp-controller="Cashier" asp-action="Create" class="btn btn-success">
+                <i class="bi bi-plus-circle"></i> &nbsp; Add New Cashier
+			</a>
+        </div>
+    </div>
+    <br/>
+    <div class="text-center">
+        <table class="table table-bordered table-striped" style="width:100%">
+        <thead>
+            <tr>
+                <th>
+                    cashier Id
+			    </th>
+                <th>
+                    cashier Name
+			    </th>
+                <th>
+                    Branch Name
+			    </th>
+                <th>Actions</th>
+		    </tr>
+	    </thead>
+        <tbody>
+            @foreach(var cashier in Model)
+            {
+                <tr>
+                    <td width="10%">
+                        @cashier.Id
+				    </td>
+                    <td width="70%">
+                        @cashier.CashierName
+				    </td>
+                     <td width="70%">
+                        @cashier.Branch.BranchName
+				    </td>
+                    <td width="20%">
+                        <div class="w-75 btn-group" role="group">
+                            <a asp-controller="Cashier" asp-action="Edit" asp-route-id="@cashier.Id"
+                            class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
+                            <a asp-controller="Cashier" asp-action="Delete" asp-route-id="@cashier.Id"
+                            class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
+					    </div>
+				    </td>
+			    </tr>
+            }
+        </tbody>
+    </table>
+    </div>
+</main>
