--- a/ArmyTechTask/Areas/Admin/Views/Cities/Index.cshtml
+++ b/ArmyTechTask/Areas/Admin/Views/Cities/Index.cshtml
@@ -40,9 +40,9 @@
 				    </td>
                     <td width="20%">
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="Category" asp-action="Edit" asp-route-id="@city.Id"
+                            <a asp-controller="Cities" asp-action="Edit" asp-route-id="@city.Id"
                             class="btn btn-primary mx-2"> <i class="bi bi-pencil-square"></i> Edit</a>
-                            <a asp-controller="Category" asp-action="Delete" asp-route-id="@city.Id"
+                            <a asp-controller="Cities" asp-action="Delete" asp-route-id="@city.Id"
                             class="btn btn-danger mx-2"> <i class="bi bi-trash-fill"></i> Delete</a>
 					    </div>
 				    </td>
