--- a/ArmyTechTask/Views/Shared/_Layout.cshtml
+++ b/ArmyTechTask/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -24,12 +24,18 @@
             <a class="nav-link" asp-area="" asp-controller="Invoice" asp-action="Index">Invoice</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link" asp-area="" asp-controller="InvoiceAjaxVersion" asp-action="Index">Invoice Ajax</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" asp-area="Admin" asp-controller="Cashier" asp-action="Index">Cashier</a>
         </li>
-            <li class="nav-item">
+        <li class="nav-item">
+            <a class="nav-link" asp-area="Admin" asp-controller="Cashier" asp-action="IndexAjax">Cashier Ajax</a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link" asp-area="Admin" asp-controller="Branches" asp-action="Index">Branches</a>
         </li>
-            <li class="nav-item">
+        <li class="nav-item">
             <a class="nav-link" asp-area="Admin" asp-controller="Cities" asp-action="Index">Cities</a>
         </li>
       </ul>
