--- a/ArmyTechTask/Views/_ViewImports.cshtml
+++ b/ArmyTechTask/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ArmyTechTask
 @using ArmyTechTask.Models
+@using ArmyTechTask.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
