--- a/ArmyTechTask/Areas/Customer/Views/Invoice/Create.cshtml
+++ b/ArmyTechTask/Areas/Customer/Views/Invoice/Create.cshtml
@@ -34,7 +34,7 @@
 			<span asp-validation-for="InvoiceDetails.ItemPrice" class="text-danger"></span>
 		</div>
 		<button type="submit" class="btn btn-primary" style="width:150px">Create</button>
-		<a onclick="closeModal();" class="btn btn-secondary" style="width:150px">
+			<a asp-controller="Invoice" asp-action="Index" class="btn btn-secondary" style="width:150px">
 			Back to List
 		</a>
 	</div>
