--- a/ArmyTechTask/Areas/Customer/Views/Invoice/Delete.cshtml
+++ b/ArmyTechTask/Areas/Customer/Views/Invoice/Delete.cshtml
@@ -12,11 +12,9 @@
 			<input asp-for="CustomerName" disabled class="form-control" />
 		</div>
 		<div class="mb-3">
-			<label asp-for="CashierId"></label>
-			<select asp-for="CashierId" asp-items="@Model.Cashier" class="form-select">
-				<option disabled selected>--Select Cashier--</option>
-			</select>
-			<span asp-validation-for="InvoiceHeader.CashierId" class="text-danger"></span>
+			<label asp-for="Cashier.CashierName"></label>
+			<input asp-for="Cashier.CashierName" disabled class="form-control" />
+			
 		</div>
 		<div class="d-flex justify-content-between my-2">
 		@foreach (var item in Model.InvoiceDetails)
